--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "mocha --reporter=dot"
+        "test": "mocha --watch"
     },
     "author": "",
     "license": "ISC",
